Fixed the overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap");
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -19,7 +28,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white;
-  overflow-x: hidden;
 }
 
 code {
